@@ -8,15 +8,15 @@
         <div class="col two-third">
             <h2>{% trans 'Search in the box' %}</h2>
             {% include 'search/box.html' %}
-            <div class="results">
+            <ul class="results">
                 {% if q %}
                     {% for result in results %}
-                        <div>{{ result|theme_slug }} <a href="{{ result.get_absolute_url }}">{{ result }}</a></div>
+                        <li>{{ result|theme_slug }} <a href="{{ result.get_absolute_url }}">{{ result }}</a></li>
                     {% empty %}
                         {% blocktrans with query=q %}No result for "{{ query }}".{% endblocktrans %}
                     {% endfor %}
                 {% endif %}
-            </div>
+            </ul>
         </div>
     </div>
 {% endblock content %}
