@@ -17,7 +17,8 @@ SLUGS = {
 }
 THEMES = {
     'Book': 'read',
-    'Content': 'create'
+    'Content': 'create',
+    'Document': 'discover'
 }
 
 
@@ -26,7 +27,7 @@ def theme_slug(inst, slug=None):
     tpl = '<span class="theme {klass}">{slug}</span>'
     name = inst.__class__.__name__
     if not slug:
-        slug = SLUGS.get(name, name.lower())
+        slug = getattr(inst, 'slug', SLUGS.get(name, name.lower()))
     klass = THEMES.get(name, slug)
     return mark_safe(tpl.format(klass=klass, slug=slug))
 
