@@ -15,6 +15,7 @@ ideascube (0.7.0-dev) unstable; urgency=low
   * always display download button in document page (fix #238)
   * add a "add stock item" link in each module header
   * fix missing power management home card for ideasbox
+  * fix bad slug theme for document in global search
 
  -- Yohan Boniface <hi@yohanboniface.me>  Sat, 5 Dec 2015 11:25:27 +0100
 
